# Yuki

./: .clang-format  .gitignore  .gitmodules  Build.sh  CMakeLists.txt  LinuxBuild.sh  README.md  compile_flags.txt  premake5.lua
EngineTester/: CMakeLists.txt  premake5.lua
EngineTester/Resources/HLSL/: RayGen.hlsl  Triangle.hlsl
EngineTester/Shaders/: Raster.glsl  RayAnyHit.glsl  RayClosestHit.glsl  RayCommon.glsl  RayGen.glsl  RayMiss.glsl  Raytracing.glsl
EngineTester/Source/: Main.cpp  Main.ixx
Yuki/: CMakeLists.txt  cpp.hint  premake5.lua
Yuki-D3D12/: CMakeLists.txt  premake5.lua
Yuki-D3D12/Source/: Common.hpp  D3D12CommandList.ixx  D3D12Common.hpp  D3D12Context.ixx  D3D12Fence.ixx  D3D12GraphicsPipeline.ixx  D3D12Queue.ixx  D3D12RHI.ixx  D3D12RHIHandles.ixx  D3D12ShaderLibrary.ixx  D3D12Swapchain.ixx  RHI.hpp  RHIContext.cpp
Yuki/Include/Yuki/: EntryPoint.hpp
Yuki/Include/Yuki/Asset/: AssetConverters.hpp  AssetDefinitions.hpp  AssetID.hpp  AssetImporter.hpp  AssetRegistry.hpp  AssetSystem.hpp  AssetTypes.hpp
Yuki/Include/Yuki/Containers/: Array.hpp  List.hpp
Yuki/Include/Yuki/Core/: Application.hpp  Core.hpp  Debug.hpp  EnumFlags.hpp  GenericWindow.hpp  InitializerList.hpp  JobSystem.hpp  Logging.hpp  ResourceHandle.hpp  ResourceRegistry.hpp  ScopeExitGuard.hpp  StableDynamicArray.hpp  Stopwatch.hpp  StringHelper.hpp  Timer.hpp
Yuki/Include/Yuki/Entities/: RenderingComponents.hpp  TransformComponents.hpp
Yuki/Include/Yuki/EventSystem/: ApplicationEvents.hpp  Event.hpp  EventSystem.hpp  WindowEvents.hpp
Yuki/Include/Yuki/IO/: FileIO.hpp  KeyCodes.hpp  MeshLoader.hpp
Yuki/Include/Yuki/ImGui/: ImGuiContext.hpp  ImGuiRenderContext.hpp  ImGuiWindowContext.hpp
Yuki/Include/Yuki/Math/: Mat4.hpp  Math.hpp  Quat.hpp  Vec2.cpp  Vec2.hpp  Vec3.cpp  Vec3.hpp  Vec4.hpp
Yuki/Include/Yuki/Memory/: Buffer.hpp  Unique.hpp
Yuki/Include/Yuki/Physics/: PhysicsWorld.hpp
Yuki/Include/Yuki/Rendering/: DescriptorSetBuilder.hpp  Device.hpp  EntityRenderer.hpp  GraphicsPipeline.hpp  GraphicsPipelineBuilder.hpp  ImageFormat.hpp  Mesh.hpp  MeshData.cpp  MeshData.hpp  MeshGenerator.hpp  PipelineBuilder.hpp  RHI.hpp  RenderAPI.hpp  RenderContext.hpp  RenderResources.hpp  RenderTarget.hpp  Renderer.hpp  SceneRenderer.hpp  Shader.hpp  ShaderCompiler.hpp  ShaderManager.hpp  Swapchain.hpp  TransferScheduler.hpp
Yuki/Include/Yuki/World/: ComponentGroup.hpp  World.hpp
Yuki/Source/: YukiPCH.cpp  YukiPCH.hpp
Yuki/Source/Core/: Application.cpp
Yuki/Source/Engine/Asset/: AssetConverters.cpp  AssetID.cpp  AssetRegistry.cpp  AssetSystem.cpp  MeshImporter.cpp  TextureImporter.cpp
Yuki/Source/Engine/Common/: Application.cpp  Application.hpp  Core.hpp  EngineTime.cpp  EngineTime.hpp  EntryPoint.hpp  ErrorReporter.hpp  FileIO.cpp  FileIO.hpp  Logging.cpp  Logging.hpp  StringHelper.cpp  StringHelper.hpp  Timer.hpp  Types.hpp  Unique.hpp  UniqueID.cpp  UniqueID.hpp  (+1 more)
Yuki/Source/EventSystem/: EventSystem.cpp
Yuki/Source/VulkanRHI/: VmaImpl.cpp  VulkanAccelerationStructure.cpp  VulkanAccelerationStructure.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandPool.cpp  VulkanCommandPool.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDescriptors.cpp  VulkanDescriptors.hpp  VulkanFence.cpp  VulkanFence.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanInclude.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanPlatformUtils.cpp  VulkanPlatformUtils.hpp  VulkanQueue.cpp  VulkanQueue.hpp  VulkanRHI.hpp  VulkanRenderDevice.cpp  VulkanRenderDevice.hpp  VulkanRenderFeatures.hpp  VulkanShaderCompiler.cpp  VulkanShaderCompiler.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanUtils.hpp
(+274 files in other folders)
